v0.5.0/_sources/autoapi/ad_hoc_diffractometer/factories/index.rst.txt
factories
=========

.. py:module:: ad_hoc_diffractometer.factories

.. autoapi-nested-parse::

   Import: ``ad_hoc_diffractometer.factories``

   This module provides the **geometry registry** infrastructure: the
   ``@register_geometry`` decorator, discovery of third-party geometry plugins
   via entry points, and the ``list_geometries()`` / ``get_geometry()`` /
   ``make_geometry()`` lookup functions.

   It also defines the shared **basis dictionaries** (``BASIS_YOU``,
   ``BASIS_BL``) and the default **kappa tilt angle** (``KAPPA_ALPHA_DEFAULT``)
   used by the pre-built geometry functions in
   :mod:`ad_hoc_diffractometer.presets`.

   Pre-built geometries
   --------------------

   The 10 pre-built geometry factory functions (``psic``, ``fourcv``,
   ``fourch``, ``sixc``, ``kappa4cv``, ``kappa4ch``, ``kappa6c``, ``zaxis``,
   ``s2d2``, ``fivec``) live in :mod:`ad_hoc_diffractometer.presets`.
   Access them as::

       import ad_hoc_diffractometer as ahd

       g = ahd.presets.fourcv()

   Extension via entry points
   --------------------------
   Third-party packages can contribute additional geometry factories by
   declaring an entry point in the ``"ad_hoc_diffractometer.geometries"``
   group in their ``pyproject.toml``::

       [project.entry-points."ad_hoc_diffractometer.geometries"]
       my_geom = "my_package.module:my_factory_function"

   The factory function must accept no required arguments (it may accept
   keyword arguments) and return an ``AdHocDiffractometer`` instance.
   Entry-point geometries are discovered and loaded automatically when
   ``list_geometries()`` or ``get_geometry()`` is first called; they do NOT
   need to call ``@register_geometry`` themselves.

   **Geometry names must be globally unique.**  If an entry-point name
   duplicates an already-registered name (whether a built-in or a
   previously loaded plugin), a ``ValueError`` is raised at discovery time.
   This prevents silent shadowing: an external package cannot overwrite
   ``fourcv``, ``psic``, or any other registered geometry.

   Writing a custom geometry
   -------------------------
   Each factory accepts an optional ``basis`` keyword argument (defaulting to
   the canonical convention for that geometry).  Inside the factory, resolve
   physical-direction aliases locally::

       from ad_hoc_diffractometer import AdHocDiffractometer, register_geometry
       from ad_hoc_diffractometer.factories import BASIS_YOU
       from ad_hoc_diffractometer.stage import Stage

       @register_geometry
       def my_geometry(basis=BASIS_YOU):
           VERTICAL     = basis["vertical"]
           LATERAL      = basis["lateral"]
           LONGITUDINAL = basis["longitudinal"]
           stages = [
               Stage("omega", -LATERAL,      role="sample"),
               Stage("chi",   +LONGITUDINAL, parent="omega", role="sample"),
               Stage("phi",   -LATERAL,      parent="chi",   role="sample"),
               Stage("ttheta", -LATERAL,     role="detector"),
           ]
           return AdHocDiffractometer(
               name="my_geometry", stages=stages, basis=basis,
           )

   The two public basis dicts ``BASIS_YOU`` and ``BASIS_BL`` are available
   from this module.  Pass ``basis=BASIS_BL`` for Busing & Levy convention
   geometries.

   .. rubric:: References

   * W.R. Busing & H.A. Levy, Acta Cryst. 22, 457-464 (1967)
   * H. You, J. Appl. Cryst. 32, 614-623 (1999)
     DOI:10.1107/S0021889899001223
   * ITC Vol. C, Sec. 2.2.6 (2006)
     DOI:10.1107/97809553602060000577
   * D.A. Walko, Ref. Module Mater. Sci. Mater. Eng. (2016)


Attributes
----------

.. autoapisummary::

   ad_hoc_diffractometer.factories.BASIS_BL
   ad_hoc_diffractometer.factories.BASIS_YOU
   ad_hoc_diffractometer.factories.GEOMETRY_ENTRY_POINT_GROUP
   ad_hoc_diffractometer.factories.KAPPA_ALPHA_DEFAULT


Functions
---------

.. autoapisummary::

   ad_hoc_diffractometer.factories.get_geometry
   ad_hoc_diffractometer.factories.list_geometries
   ad_hoc_diffractometer.factories.make_geometry
   ad_hoc_diffractometer.factories.register_geometry


Module Contents
---------------

.. py:data:: BASIS_BL

   Basis vector dictionary for the Busing & Levy (1967) coordinate convention.

   Maps physical direction names to Cartesian unit vectors:

   - ``"lateral"`` → +x
   - ``"longitudinal"`` → +y (along the beam)
   - ``"vertical"`` → +z (opposite to gravitational acceleration)

   Used by ``fourcv``, ``fourch``, ``kappa4cv``, and ``kappa4ch``
   (in :mod:`ad_hoc_diffractometer.presets`).

.. py:data:: BASIS_YOU

   Basis vector dictionary for the You (1999) coordinate convention.

   Maps physical direction names to Cartesian unit vectors:

   - ``"vertical"`` → ``XHAT`` (+x, opposite to gravitational acceleration)
   - ``"longitudinal"`` → ``YHAT`` (+y, along the beam)
   - ``"lateral"`` → ``ZHAT`` (+z, completes the right-handed system: vertical × longitudinal)

   Default basis used by ``psic``, ``sixc``, ``kappa6c``,
   ``zaxis``, ``s2d2``, and ``fivec`` (in :mod:`ad_hoc_diffractometer.presets`).

.. py:data:: GEOMETRY_ENTRY_POINT_GROUP
   :value: 'ad_hoc_diffractometer.geometries'


   Entry-point group name for geometry plugins.

.. py:data:: KAPPA_ALPHA_DEFAULT
   :value: 50.0


   Default kappa tilt angle in degrees (Walko 2016; Enraf-Nonius; ITC Vol. C).

.. py:function:: get_geometry(name: str)

   .. container:: import-path

      Import: ``ad_hoc_diffractometer.factories.get_geometry``


   Return the registered factory function for the named geometry.

   This is the primitive lookup — it returns the callable factory, not an
   instance.  Use make_geometry() if you want an AdHocDiffractometer
   instance directly.

   :param name: Name of the geometry, as registered by @register_geometry
                (e.g. 'psic', 'fourcv', 'kappa4cv').
   :type name: str

   :returns: The factory function for the named geometry.
   :rtype: callable

   :raises ValueError: If no geometry with that name is registered, with a message listing
       the available names.

   .. rubric:: Examples

   >>> from ad_hoc_diffractometer import get_geometry
   >>> factory = get_geometry("psic")
   >>> factory()
   AdHocDiffractometer(name='psic', ...)
   >>> get_geometry("kappa4cv")(alpha_deg=50)
   AdHocDiffractometer(name='kappa4cv', ...)


.. py:function:: list_geometries() -> dict[str, type]

   .. container:: import-path

      Import: ``ad_hoc_diffractometer.factories.list_geometries``


   Return a copy of the geometry registry as {name: factory_callable}.

   Includes all built-in geometries (registered via ``@register_geometry``
   at import time) plus any third-party geometry plugins installed as
   entry points in the ``"ad_hoc_diffractometer.geometries"`` group.

   Entry-point discovery runs automatically the first time this function
   is called; subsequent calls use the already-populated registry.

   :returns: Keys are factory names (e.g. ``'psic'``, ``'fourcv'``).
             Values are the callable factory functions.
   :rtype: dict

   .. rubric:: Examples

   >>> from ad_hoc_diffractometer import list_geometries
   >>> sorted(list_geometries())
   ['fivec', 'fourch', 'fourcv', 'kappa4ch', 'kappa4cv', 'kappa6c',
    'psic', 's2d2', 'sixc', 'zaxis']
   >>> list_geometries()['psic']()   # instantiate by name
   AdHocDiffractometer(name='psic', ...)


.. py:function:: make_geometry(name: str, **kwargs)

   .. container:: import-path

      Import: ``ad_hoc_diffractometer.factories.make_geometry``


   Instantiate a geometry by name, passing keyword arguments to its factory.

   Looks up the factory for the named geometry via get_geometry() and calls
   it with the supplied kwargs.  This is the most convenient entry point for
   config-driven or programmatic geometry selection.

   :param name: Name of the geometry (e.g. 'psic', 'fourcv', 'kappa4cv').
   :type name: str
   :param \*\*kwargs: Keyword arguments forwarded to the factory function.  Most factories
                      take no arguments; kappa factories accept alpha_deg.

   :returns: A fully configured diffractometer geometry instance.
   :rtype: AdHocDiffractometer

   :raises ValueError: If no geometry with that name is registered.

   .. rubric:: Examples

   >>> from ad_hoc_diffractometer import make_geometry
   >>> make_geometry("psic")
   AdHocDiffractometer(name='psic', ...)
   >>> make_geometry("kappa4cv", alpha_deg=50)
   AdHocDiffractometer(name='kappa4cv', ...)
   >>> make_geometry("kappa6c", alpha_deg=55)
   AdHocDiffractometer(name='kappa6c', ...)


.. py:function:: register_geometry(func)

   .. container:: import-path

      Import: ``ad_hoc_diffractometer.factories.register_geometry``


   Decorator that registers a geometry factory in _GEOMETRY_REGISTRY.

   The function is stored under its own ``__name__``, so the registry
   key is always identical to the callable's name.  The function is
   returned unchanged; this decorator has no runtime effect on the
   factory itself.

   Third-party packages do **not** need to use this decorator — they
   can instead declare an entry point in the
   ``"ad_hoc_diffractometer.geometries"`` group in their
   ``pyproject.toml`` and the factory will be discovered automatically.

   .. rubric:: Example

   ::

       @register_geometry
       def psic() -> AdHocDiffractometer:
           ...


